added 3d earth backg. with html

--- a/intersteller hackathon/index.html
+++ b/intersteller hackathon/index.html
@@ -25,6 +25,9 @@
         </div>
     </nav>
     <div id="3d-canvas-container">
+        <div>
+            
+        </div>
         <canvas id="3d-canvas"></canvas>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
