--- a/intersteller hackathon/neopage.html
+++ b/intersteller hackathon/neopage.html
@@ -16,7 +16,6 @@
     <div id="canvas-container">
         <canvas id="webgl-canvas"></canvas>
         <div class="overlay">
-            <h1>Orbit Tracker</h1>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <a class="navbar-brand" href="#">
                     <span class="animated-text">Orbit Tracker</span>
@@ -30,12 +29,12 @@
                         <li class="nav-item">
                             <a class="nav-link" href="3dearth.html">Home</a>
                         </li>
-                       
+                        
                         <li class="nav-item">
                             <a class="nav-link" href="#">Planets</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="neopage.html" id="neo-link">NEO</a>
+                            <a class="nav-link" href="#" id="neo-link">NEO</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">NEA</a>
