--- a/intersteller hackathon/neopage.html
+++ b/intersteller hackathon/neopage.html
@@ -34,10 +34,10 @@
                             <a class="nav-link" href="#">Planets</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" id="neo-link">NEO</a>
+                            <a class="nav-link" href="neopage.html" id="neo-link">NEO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">NEA</a>
+                            <a class="nav-link" href="neapage.html">NEA</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">PHA's</a>
