--- a/intersteller hackathon/neapage.html
+++ b/intersteller hackathon/neapage.html
@@ -6,7 +6,7 @@
     <title>Interactive Earth Model</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     
-    <link rel="stylesheet" href="orrery-web -app\root\css\3dearth.css"> <!-- Link to the CSS file -->
+    <link rel="stylesheet" href="orrery-web -app\root\css\neapage.css"> <!-- Link to the CSS file -->
     
 </head>
 <body>
@@ -65,7 +65,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.rawgit.com/mrdoob/three.js/r128/examples/js/loaders/GLTFLoader.js"></script>
     <script src="https://cdn.rawgit.com/mrdoob/three.js/r128/examples/js/controls/OrbitControls.js"></script>
-    <script src="orrery-web -app\root\js\3dearth.js"></script> <!-- Link to the JavaScript file -->
+    <script src="orrery-web -app\root\js\neapage.js"></script> <!-- Link to the JavaScript file -->
 
     <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
