--- a/intersteller hackathon/neapage.html
+++ b/intersteller hackathon/neapage.html
@@ -53,6 +53,14 @@
                 </div>
             </nav>
 
+            <canvas id="webgl-canvas"></canvas>
+
+            <!-- Info Box for displaying NEO details -->
+            <div id="info-box">
+                <p id="object-name"></p>
+                <p id="object-distance"></p>
+                <p id="object-speed"></p>
+            </div>
 
             
             
