--- a/intersteller hackathon/3dearth.html
+++ b/intersteller hackathon/3dearth.html
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="3dearth.html">Home</a>
+                            <a class="nav-link" href="3dearth.html" id="eee">Home</a>
                         </li>
                        
                         <li class="nav-item">
